--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "timetable_server"]
 	path = timetable_server
 	url = https://github.com/leenzstra/timetable_server.git
+[submodule "timetable_parser"]
+	path = timetable_parser
+	url = https://github.com/leenzstra/timetable_parser.git
