--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.leenz.pnrpu">
     <!-- permissions for INTERNET -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -12,8 +13,8 @@
         android:icon="@drawable/logo"
         android:roundIcon="@drawable/logo"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:usesCleartextTraffic="true"
+        android:supportsRtl="true"
         android:theme="@style/Theme.Timetable_test"
         tools:targetApi="31">
         <activity
